# ObjectCollisions

./: CMakeLists.txt  Makefile  README.md
.github/: ci.yaml
.github/workflows/: ci.yaml
core/include/: Category.hpp  Circle.hpp  Game.hpp  GameObject.hpp  Player.hpp  Rectangle.hpp  SceneNode.hpp  Shape.hpp  World.hpp
core/src/: Circle.cpp  Game.cpp  GameObject.cpp  Player.cpp  Rectangle.cpp  SceneNode.cpp  Shape.cpp  World.cpp
